--- a/projectutama/index.html
+++ b/projectutama/index.html
@@ -263,12 +263,52 @@
             .button-group .btn { width: 100%; }
             #music-player-panel { width: calc(100% - 40px); }
         }
-    </style>
+
+        #gacha-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
+            z-index: 2000;
+        }
+        #gacha-overlay video {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        #gacha-message {
+            position: relative;
+            z-index: 2;
+            color: #fff;
+            font-size: 2rem;
+            text-align: center;
+        }
+        .gacha-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+        .gacha-btn img {
+            height: 40px;
+        }
+</style>
 </head>
 <body onload="initializeApp()">
     
     <audio id="bg-music" loop></audio>
-
+    <audio id="sfx-btn-click" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/btn_click.mp3" preload="auto"></audio>
+    <audio id="sfx-btn-accepted" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/btn_accepted.mp3" preload="auto"></audio>
+    <audio id="sfx-rarity-3" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/wish_rarity_3.flac" preload="auto"></audio>
+    <audio id="sfx-rarity-4" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/wish_rarity_4.flac" preload="auto"></audio>
+    <audio id="sfx-rarity-5" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/wish_rarity_5.flac" preload="auto"></audio>
+    <audio id="sfx-results" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/wish_results.mp3" preload="auto"></audio>
+    
     <div id="music-hint-popup">Atur Audio di Sini! 👇</div>
 
     <div id="music-player-panel">
@@ -297,6 +337,13 @@
     <div id="audio-control-btn" title="Buka Pengaturan Audio">
         <svg id="icon-music-player" viewBox="0 0 24 24"><path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"></path></svg>
         <svg id="icon-close-player" style="display:none;" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path></svg>
+    </div>
+
+    <div id="gacha-overlay">
+        <video id="gacha-background" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/wish_background_loop.webm" loop muted></video>
+        <video id="gacha-ing-r4" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/wish_ing_rarity4.webm" muted></video>
+        <video id="gacha-ing-r5" src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/wish_ing_rarity5.webm" muted></video>
+        <div id="gacha-message"></div>
     </div>
 
     <div id="page-coach-selection" class="page">
@@ -383,6 +430,10 @@
         <div class="selection-container thank-you-container">
             <p id="thank-you-message" class="thank-you-message"></p>
             <p id="coach-signature" class="coach-signature"></p>
+            <button id="motivation-gacha-btn" class="btn btn-primary gacha-btn">
+                <img src="https://pub-d27e4354b00f442090127e61c8ba9786.r2.dev/UI_Button_Gacha_1_pre.png" alt="Gacha">
+                <span>Mau Gacha Kalimat Motivasi Kamu?</span>
+            </button>
         </div>
     </div>
 
@@ -998,6 +1049,50 @@
         if(voiceCloseBtn) voiceCloseBtn.disabled = false;
         if(voiceStatus) voiceStatus.textContent = "Gagal mengirim, coba lagi.";
     }
+
+    // --- Gacha Motivation Feature ---
+    const gachaOverlay = document.getElementById('gacha-overlay');
+    const gachaBgVideo = document.getElementById('gacha-background');
+    const gachaR4Video = document.getElementById('gacha-ing-r4');
+    const gachaR5Video = document.getElementById('gacha-ing-r5');
+    const gachaMessage = document.getElementById('gacha-message');
+
+    const sfxBtnClick = document.getElementById('sfx-btn-click');
+    const sfxBtnAccepted = document.getElementById('sfx-btn-accepted');
+    const sfxRarity4 = document.getElementById('sfx-rarity-4');
+    const sfxRarity5 = document.getElementById('sfx-rarity-5');
+    const sfxResults = document.getElementById('sfx-results');
+
+    const commonMotivations = [
+        'Tetaplah melangkah meski perlahan.',
+        'Setiap usaha kecilmu berarti.'
+    ];
+    const deepMotivations = [
+        'Sabar dan shalatlah, Allah bersama orang yang sabar.',
+        'Kesulitan bersama kemudahan, percayalah pada-Nya.'
+    ];
+
+    document.getElementById('motivation-gacha-btn')?.addEventListener('click', () => {
+        sfxBtnClick.play();
+        gachaOverlay.style.display = 'flex';
+        gachaBgVideo.currentTime = 0;
+        gachaBgVideo.play();
+        const isDeep = Math.random() < 0.2;
+        const video = isDeep ? gachaR5Video : gachaR4Video;
+        const audio = isDeep ? sfxRarity5 : sfxRarity4;
+        video.currentTime = 0;
+        audio.currentTime = 0;
+        video.play();
+        audio.play();
+        video.onended = () => {
+            sfxResults.play();
+            sfxBtnAccepted.play();
+            gachaOverlay.style.display = 'none';
+            const pool = isDeep ? deepMotivations : commonMotivations;
+            const msg = pool[Math.floor(Math.random() * pool.length)];
+            alert(msg);
+        };
+    });
 </script>
 </body>
 </html>
